# depscope

./: .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  DATA_SOURCES.md  INTEGRATION_NOTES_CLAUDE_2026-04-21.md  LICENSES.md  README.md  RUNBOOK.md  run.py
.github/: dependabot.yml
api/: auth.py  cache.py  config.py  curated_signals.py  database.py  email_templates.py  health.py  historical_compromises.json  historical_compromises.py  history.py  intelligence.py  mailer.py  main.py  mcp_http.py  payments.py  registries.py  stdlib_modules.json  stdlib_modules.py  verticals.py  verticals_v2.py
benchmark/: README.md
cli/: package.json
content/: weekly-report-001.md  weekly-report-002.md  weekly-report-003.md
docs/: BRAND_DEFENSE.md
frontend/: next.config.ts  package-lock.json
mcp-server/: http-server.js  index.js  package-lock.json  package.json  server.json  tools.js
outreach/: aggregator_submissions.txt  blitz_log.txt  contacts.md  echojs_submission.txt  hashnode_article.md  mastodon_post.txt  medium_article_1.md  medium_article_2.md  medium_article_3.md  pitch-influencers.md  pitch-newsletters.md  pitch-press.md  postman_collection.json  report.md  resend_all.py  resent_log.txt  send_ai_companies.py  send_batch2.py  send_emails.py  send_experts.py  send_followup.py  sent_log.txt
python-client/: README.md  pyproject.toml
python-client/depscope/: __init__.py  client.py
schemas/: openapi-v1.json
scripts/: alerts.py  alternatives_curated_seed.py  backfill_npm_downloads.py  backfill_privacy.py  backfill_repos.py  backfill_scorecards.py  backup_db.sh  (+76 more)
(+201 files in other folders)
